<resources>
    <string name="app_name" translatable="false">My Application</string>
    <string name="sign_in_telaLogin" translatable="false">Sign In</string>
    <string name="email" translatable="false">Email</string>
    <string name="senha_login" translatable="false">password</string>
    <string name="esqueceu_sua_senha_login" translatable="false">esqueceu sua senha?</string>
    <string name="todo_login" translatable="false">TODO</string>
</resources>
